<!--
  ~ Copyright (c) 2020. BoostTag E.I.R.L. Romell D.Z.
  ~ All rights reserved
  ~ porfile.romellfudi.com
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">


            <ProgressBar
                android:id="@+id/progressbar"
                android:visibility="invisible"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:max="100"
                android:backgroundTint="@color/white"
                android:indeterminateTint="@color/colorPrimaryDark"
                android:layout_marginTop="-7dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/hint_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_emailText"
                    app:boxStrokeColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@string/my_email" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/emailButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:text="@string/btn_write_email_nfc" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="#c0c0c0" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/smsText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/hint_sms">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_smsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:text="@string/my_sms" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/smsButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/btn_write_sms_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="#c0c0c0" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_text_tel_target"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/hint_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_input_text_tel_target"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:text="@string/my_phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/telButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/btn_write_tel_nfc_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="#c0c0c0" />

            <LinearLayout
                android:id="@+id/geolocation_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/latitudeText"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight=".50"
                    android:hint="@string/hint_latitude">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_latitudeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:text="@string/my_latitude" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/centerShim"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:visibility="invisible" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/longitudeText"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight=".50"
                    android:hint="@string/hint_longitude">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_longitudeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:text="@string/my_longitude" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/geoButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/btn_write_geolocation_nfc_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="#c0c0c0" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_text_uri_target"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/hint_uri">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_input_text_uri_target"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:text="@string/my_uri" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/uriButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/btn_write_uri_nfc_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="#c0c0c0" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bluetoothInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:hint="@string/hint_mac">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_bluetoothInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@string/my_mac" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/bluetoothButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/btn_write_bluetooth_nfc_text" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
